fix spacing

--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -58,8 +58,7 @@
 
 .herobutton img {
     width: 64px;
-    padding: 0;
-    margin: 0;
+    display: block;
 }
 
 td {
@@ -73,9 +72,4 @@ h2 {
 
 p {
     text-align: center;
-}
-
-a {
-    padding: 0;
-    margin: 0;
 }
